# internal/app/models/league.go
@@ -1,7 +1,8 @@
 package models
 
 type League struct {
-	Teams       []Team  `json:"teams"`
-	Matches     []Match `json:"matches"`
-	CurrentWeek int     `json:"current_week"`
+	Teams                   []Team       `json:"teams"`
+	Matches                 []Match      `json:"matches"`
+	CurrentWeek             int          `json:"current_week"`
+	ChampionshipPredictions []Prediction `json:"championshipPredictions"`
 }
